@startuml

title __NAIVESEARCH's Class Diagram__\n

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.naiveSearch {
          class NaiveSearch {
              + NaiveSearch()
              + searchWord()
              - searchBlock()
              + searchWordList()
              + searchMetaData()
              + getOrigin()
              + writeToFile()
              + indexCorpus()
              + indexFile()
          }
        }
      }
    }
  }
  

  package  {
    package indexing {
      package indexing.dataStructures {
        package indexing.dataStructures.naiveSearch {
          class NaiveSearchRK {
              + NaiveSearchRK()
              - searchBlock()
              {static} - getBiggerPrime()
              {static} - getNumberOfBits()
          }
        }
      }
    }
  }
  

  NaiveSearch -up-|> IdataStructure
  NaiveSearch o-- Corpus : corpus
  NaiveSearchRK -up-|> NaiveSearch


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
